--- a/studies-v5/dnd-adventure-blog/package.json
+++ b/studies-v5/dnd-adventure-blog/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
+    "gray-matter": "^4.0.3",
+    "marked": "^4.2.3",
     "next": "13.0.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sass": "^1.56.1"
   }
 }
